# GenAI_DataOps_Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
src/agent/: config.py  health.py  logging_config.py  main.py
src/agent/cognition/: llm_reasoner.py  memory.py  router.py
src/agent/ingestion/: input_guardrails.py  listener.py
src/agent/knowledge/: complex_sql_generator.py  database.py  dataset_loader.py  date_filter_builder.py  prompt_manager.py  query_analyzer.py  schema_discovery.py  semantic_layer.yaml  semantic_loader.py  sql_validator.py
src/agent/output/: output_formatter.py  output_guardrails.py
src/agent/tools/: pandasai_tool.py  sql_tool.py
test/: test.md  test_e2e.py  verify_infra.py
